--- a/index.css
+++ b/index.css
@@ -5,6 +5,8 @@
 body{
     background-color: hsl(0, 0%, 8%);
     font-family: 'inter';
+    margin:0;
+    overflow-x:hidden;
 }
 
 p {
@@ -152,7 +154,7 @@ h5 {
     .container {
         width: 85%;
         height: 100%;
-        margin-left: 50px;
+        margin-left: 10px;
         margin-top: 10%;
     }
     .button-container{
